@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2025-10-08T01:15:49Z",
-  "count_outdated" : 1597,
-  "uniques_outdated" : 1117,
-  "count" : 1610,
-  "uniques" : 1130,
+  "timestamp" : "2025-10-09T01:16:33Z",
+  "count_outdated" : 1598,
+  "uniques_outdated" : 1118,
+  "count" : 1612,
+  "uniques" : 1132,
   "clones" : [
-    {
-      "timestamp": "2025-09-25T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
     {
       "timestamp": "2025-09-26T00:00:00Z",
       "count": 1,
@@ -112,6 +103,15 @@
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ],
       "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2025-10-08T00:00:00Z",
+      "count": 2,
+      "count_minmax": [ 2, 2 ],
+      "count_decinc": [ 0, 2 ],
+      "uniques": 2,
+      "uniques_minmax": [ 2, 2 ],
+      "uniques_decinc": [ 0, 2 ]
     }
   ]
 }
