@@ -1,12 +1,7 @@
 {
-  "count": 13,
-  "uniques": 4,
+  "count": 14,
+  "uniques": 5,
   "clones": [
-    {
-      "timestamp": "2025-09-25T00:00:00Z",
-      "count": 1,
-      "uniques": 1
-    },
     {
       "timestamp": "2025-09-26T00:00:00Z",
       "count": 1,
@@ -61,6 +56,11 @@
       "timestamp": "2025-10-07T00:00:00Z",
       "count": 1,
       "uniques": 1
+    },
+    {
+      "timestamp": "2025-10-08T00:00:00Z",
+      "count": 2,
+      "uniques": 2
     }
   ]
 }
