@@ -1,3 +1,12 @@
+2025-10-09T01:16:33Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/18362514116 # 791
+* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2025-10-09
+* notice: last 14d: unq all: 5 14
+* notice: prev accum: outdated-unq outdated-all / unq all: 1117 1597 / 1130 1610
+* notice: next accum: outdated-unq outdated-all / unq all: 1118 1598 / 1132 1612
+* notice: prev exec diff / last date diff / accum: unq all: +2 +2 -0 -0 / +2 +2 -0 -0 / 2 2
+* notice: removed / changed dates: [2025-09-25] / [2025-10-08]
+
 2025-10-08T01:15:49Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/18330738131 # 790
 * notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2025-10-08
